--- a/app/views/spree/admin/prices/_variant_prices.html.erb
+++ b/app/views/spree/admin/prices/_variant_prices.html.erb
@@ -4,7 +4,11 @@
   <% price = variant.price_in(currency.iso_code) %>
   <div class="field">
     <%= label_tag "vp[#{variant.id}][#{currency.iso_code}]", currency.iso_code %>
-    <%= text_field_tag("vp[#{variant.id}][#{currency.iso_code}]", (price ? price.display_amount.money : '')) %>
+    <%= text_field_tag(
+            "vp[#{variant.id}][#{currency.iso_code}]",
+            (price ? price.display_amount.money : ''),
+            class: "vp_#{currency.iso_code}"
+        ) %>
   </div>
 <% end %>
 </div>
